// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Masthead verify basic 1`] = `
<DocumentFragment>
  <header
    class="pf-v6-c-masthead pf-m-display-inline-on-md"
  >
    test
  </header>
</DocumentFragment>
`;

exports[`Masthead verify custom class 1`] = `
<DocumentFragment>
  <header
    class="pf-v6-c-masthead pf-m-display-inline-on-md custom-css"
  >
    test
  </header>
</DocumentFragment>
`;

exports[`Masthead verify full structure 1`] = `
<DocumentFragment>
  <header
    class="pf-v6-c-masthead pf-m-display-inline-on-md"
  >
    <div
      class="pf-v6-c-masthead__main"
    >
      <span
        class="pf-v6-c-masthead__toggle"
      >
        Toggle
      </span>
      <div
        class="pf-v6-c-masthead__brand"
      >
        <span
          class="pf-v6-c-masthead__logo"
        >
          Logo
        </span>
      </div>
    </div>
    <div
      class="pf-v6-c-masthead__content"
    >
      <span>
        Content
      </span>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Masthead verify inline display breakpoints 1`] = `
<DocumentFragment>
  <header
    class="pf-v6-c-masthead pf-m-display-inline pf-m-display-inline-on-sm pf-m-display-inline-on-md pf-m-display-inline-on-lg pf-m-display-inline-on-xl pf-m-display-inline-on-2xl"
  >
    test
  </header>
</DocumentFragment>
`;

exports[`Masthead verify inset2xl inset breakpoints 1`] = `
<DocumentFragment>
  <header
    class="pf-v6-c-masthead pf-m-display-inline-on-md pf-m-inset-2xl"
  >
    test
  </header>
</DocumentFragment>
`;

exports[`Masthead verify inset3xl inset breakpoints 1`] = `
<DocumentFragment>
  <header
    class="pf-v6-c-masthead pf-m-display-inline-on-md"
  >
    test
  </header>
</DocumentFragment>
`;

exports[`Masthead verify insetLg inset breakpoints 1`] = `
<DocumentFragment>
  <header
    class="pf-v6-c-masthead pf-m-display-inline-on-md pf-m-inset-lg"
  >
    test
  </header>
</DocumentFragment>
`;

exports[`Masthead verify insetMd inset breakpoints 1`] = `
<DocumentFragment>
  <header
    class="pf-v6-c-masthead pf-m-display-inline-on-md pf-m-inset-md"
  >
    test
  </header>
</DocumentFragment>
`;

exports[`Masthead verify insetNone inset breakpoints 1`] = `
<DocumentFragment>
  <header
    class="pf-v6-c-masthead pf-m-display-inline-on-md pf-m-inset-none"
  >
    test
  </header>
</DocumentFragment>
`;

exports[`Masthead verify insetSm inset breakpoints 1`] = `
<DocumentFragment>
  <header
    class="pf-v6-c-masthead pf-m-display-inline-on-md pf-m-inset-sm"
  >
    test
  </header>
</DocumentFragment>
`;

exports[`Masthead verify insetXl inset breakpoints 1`] = `
<DocumentFragment>
  <header
    class="pf-v6-c-masthead pf-m-display-inline-on-md pf-m-inset-xl"
  >
    test
  </header>
</DocumentFragment>
`;

exports[`Masthead verify insetXs inset breakpoints 1`] = `
<DocumentFragment>
  <header
    class="pf-v6-c-masthead pf-m-display-inline-on-md"
  >
    test
  </header>
</DocumentFragment>
`;

exports[`Masthead verify stack display breakpoints 1`] = `
<DocumentFragment>
  <header
    class="pf-v6-c-masthead pf-m-display-stack pf-m-display-stack-on-sm pf-m-display-stack-on-md pf-m-display-stack-on-lg pf-m-display-stack-on-xl pf-m-display-stack-on-2xl"
  >
    test
  </header>
</DocumentFragment>
`;

exports[`MastheadBrand verify basic 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-masthead__brand"
  >
    test
  </div>
</DocumentFragment>
`;

exports[`MastheadBrand verify custom class 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-masthead__brand custom-css"
  >
    test
  </div>
</DocumentFragment>
`;

exports[`MastheadContent verify basic 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-masthead__content"
  >
    test
  </div>
</DocumentFragment>
`;

exports[`MastheadContent verify custom class 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-masthead__content custom-css"
  >
    test
  </div>
</DocumentFragment>
`;

exports[`MastheadLogo verify anchor component with href 1`] = `
<DocumentFragment>
  <a
    class="pf-v6-c-masthead__logo"
    href="#"
    tabindex="0"
  >
    test
  </a>
</DocumentFragment>
`;

exports[`MastheadLogo verify basic 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-masthead__logo"
  >
    test
  </span>
</DocumentFragment>
`;

exports[`MastheadLogo verify custom class 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-masthead__logo custom-css"
  >
    test
  </span>
</DocumentFragment>
`;

exports[`MastheadLogo verify custom component 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-masthead__logo"
  >
    test
  </div>
</DocumentFragment>
`;

exports[`MastheadLogo verify default component 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-masthead__logo"
  >
    test
  </span>
</DocumentFragment>
`;

exports[`MastheadToggle verify basic 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-masthead__toggle"
  >
    test
  </span>
</DocumentFragment>
`;

exports[`MastheadToggle verify custom class 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-masthead__toggle custom-css"
  >
    test
  </span>
</DocumentFragment>
`;
